# tiffix

./: README.md  pyproject.toml
src/tiffix/: __init__.py  gui.py  params.py  save.py  theme.py  viewer.py
