[project]
name = "tiffix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
    "scipy>=1.17.1",
    "tifffile>=2026.4.11",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "python-language-server[all]>=0.36.2",
    "yapf>=0.43.0",
]

[project.scripts]
tiffix = "tiffix.gui:main"
